--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <item
         android:id="@+id/nav_home"
-        android:title="Profile"/>
+        android:title="Profile"
+        android:icon="@drawable/ic_baseline_account_circle_24"
+        />
     <item
         android:id="@+id/setting"
-        android:title="Settings"/>
+        android:title="Day Book"
+        android:icon="@drawable/daybook"/>
     <item
         android:id="@+id/out"
-        android:title="Sign Out"/>
+        android:title="Sign Out"
+        android:icon="@drawable/ic_baseline_exit_to_app_24"/>
 
 
 </menu>
