--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -182,7 +182,7 @@
                     <TextView
                         android:layout_width="330dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv_month_info"
+                        android:id="@+id/tv_month_down_info"
                         android:gravity="center"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="20dp"
