--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,14 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_gradiant"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".landing.register.RegisterFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/logo_b"
+        android:foregroundGravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/sign"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="47dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="Patient Registration"
+        android:textSize="25sp"
+        android:textColor="@color/light_black"
+        app:layout_constraintTop_toBottomOf="@id/logo"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/mail_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="30dp"
+        android:textSize="18sp"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+        app:layout_constraintCircleRadius="20dp"
+        app:layout_constraintTop_toBottomOf="@id/sign"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/bg_login">
+
+        <com.google.android.material.textfield.TextInputEditText
+
+            android:id="@+id/mail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_login"
+            android:hint="Enter your email address"
+            android:inputType="textEmailAddress"
+            android:textAllCaps="false"
+            android:textColorHint="@color/light_black"
+            app:layout_constraintCircleRadius="10dp">
+
+        </com.google.android.material.textfield.TextInputEditText>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/password_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="30dp"
+        android:textSize="18sp"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+        app:layout_constraintCircleRadius="20dp"
+        app:layout_constraintTop_toBottomOf="@id/mail_layout"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_login"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/light_black">
+
+        <com.google.android.material.textfield.TextInputEditText
+
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_login"
+            android:hint="Enter your password"
+            android:inputType="textPassword"
+            android:textColorHint="@color/light_black"
+            app:layout_constraintCircleRadius="10dp">
+
+        </com.google.android.material.textfield.TextInputEditText>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_login"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginHorizontal="60dp"
+        android:background="@drawable/button_bg"
+        android:textSize="20sp"
+        android:layout_marginTop="25dp"
+        android:textAllCaps="false"
+        android:text="Register"
+        android:textColor="@color/light_black"
+        app:layout_constraintTop_toBottomOf="@id/password_layout">
+
+    </androidx.appcompat.widget.AppCompatButton>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
