--- a/app/src/main/res/layout/fragment_doctor_home.xml
+++ b/app/src/main/res/layout/fragment_doctor_home.xml
@@ -1,84 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_home"
     tools:context=".homeDoctor.DoctorHomeFragment">
 
 
-           <View
-               android:id="@+id/bg_home"
-               android:layout_width="match_parent"
-               android:layout_height="300dp"
-               android:background="@drawable/bg_home"/>
+    <View
+        android:id="@+id/bg_home"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
 
-           <ImageView
-               android:layout_width="50dp"
-               android:layout_height="50dp"
-               android:src="@drawable/logo_big"
-               android:layout_gravity="right"
-               android:layout_marginEnd="12dp"
-               android:layout_marginTop="12dp"/>
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
+        android:src="@drawable/logo_big" />
 
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-               <ImageView
-                   android:layout_width="150dp"
-                   android:layout_height="150dp"
-                   android:layout_gravity="center"
-                   android:layout_marginTop="75dp"
-                   android:src="@drawable/baby"
-                   android:scaleType="fitXY"
-                   />
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/baby" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:orientation="horizontal">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingAdd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="3dp"
+                android:layout_marginBottom="5dp"
+                android:visibility="gone"
+                android:backgroundTint="@color/white"
+                android:src="@drawable/add"
+                app:fabSize="auto" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingOut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="3dp"
+                android:layout_marginBottom="5dp"
+                android:backgroundTint="@color/white"
+                android:visibility="gone"
+                android:src="@drawable/exit"
+                app:fabSize="auto" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:backgroundTint="@color/white"
+                android:src="@drawable/vector_home"
+                app:fabSize="auto" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/recyler_row" />
+
+    </LinearLayout>
 
 
-               <com.google.android.material.floatingactionbutton.FloatingActionButton
-                   android:id="@+id/floating"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_gravity="end"
-                   android:layout_marginBottom="10dp"
-                   android:layout_marginEnd="10dp"
-                   android:backgroundTint="@color/white"
-                   android:src="@drawable/vector_home"
-                   app:fabSize="auto"/>
-
-               <com.google.android.material.floatingactionbutton.FloatingActionButton
-                   android:id="@+id/floatingAdd"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_gravity="end"
-                   android:layout_marginBottom="12dp"
-                   android:layout_marginEnd="10dp"
-                   android:backgroundTint="@color/white"
-                   android:visibility="gone"
-                   android:src="@drawable/add"
-                   app:fabSize="auto"/>
-
-               <com.google.android.material.floatingactionbutton.FloatingActionButton
-                   android:id="@+id/floatingOut"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_gravity="end"
-                   android:layout_marginBottom="10dp"
-                   android:layout_marginEnd="10dp"
-                   android:backgroundTint="@color/white"
-                   android:src="@drawable/exit"
-                   android:visibility="gone"
-                   app:fabSize="auto"/>
-
-               <androidx.recyclerview.widget.RecyclerView
-                   android:id="@+id/recyler_view"
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-                   tools:listitem="@layout/recyler_row"
-                   />
-           </LinearLayout>
-
-       </FrameLayout>
+</FrameLayout>
 
