--- a/app/src/main/res/layout/fragment_doctor_home.xml
+++ b/app/src/main/res/layout/fragment_doctor_home.xml
@@ -77,6 +77,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyler_view"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/recyler_row" />
