--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_gradiant"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl_Login"
     tools:context=".landing.register.RegisterFragment">
 
     <ImageView
@@ -108,5 +109,15 @@
         app:layout_constraintTop_toBottomOf="@id/password_layout">
 
     </androidx.appcompat.widget.AppCompatButton>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
